--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -13,7 +13,19 @@
     <!--=include header.html -->
 
     <main class="main">
-
+      <section class="hero">
+        <div class="hero__container">
+          <div class="hero__content">
+            <h1 class="hero__title">Backham BOSS collection</h1>
+            <a class="hero__link" href="#">SHOP NEW ARRIVALS</a>
+          </div>
+        </div>
+        <picture>
+          <source srcset="images/hero-bg.avif" type="image/avif">
+          <source srcset="images/hero-bg.webp" type="image/webp">
+          <img class="hero__img" src="images/hero-bg.jpg" alt="Hero image">
+        </picture>
+      </section>
     </main>
 
     <!--=include footer.html -->
