added new-collection section to main page

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -26,6 +26,44 @@
           <img class="hero__img" src="images/hero-bg.jpg" alt="Hero image">
         </picture>
       </section>
+      <section class="new-collection">
+        <div class="new-collection__container">
+          <div class="new-collection__content">
+            <h2 class="new-collection__title">NEW COLLECTION</h2>
+            <div class="new-collection__text">
+              <p>
+                A new era begins. Co-designed with David, the BECKHAM x BOSS collection showcases elevated design in the
+                form
+                of timeless wardrobe staples and subtle statement pieces.
+              </p>
+              <p>
+                The exclusive assortment features a wide range of fashion-forward separates that can easily be paired to
+                create
+                countless outfits — think T-shirts, polos, trousers, blazers, jackets, coats, accessories, and more.
+              </p>
+              <p>
+                Explore the full selection today.
+              </p>
+            </div>
+            <a class="new-collection__link" href="#">View the collection</a>
+          </div>
+          <picture class="new-collection__img">
+            <source srcset="images/new-collection-1.avif" type="image/avif">
+            <source srcset="images/new-collection-1.webp" type="image/webp">
+            <img src="images/new-collection-1.jpg" alt="new collection image">
+          </picture>
+          <div class="new-collection__box">
+            <picture class="new-collection__box-img">
+              <source srcset="images/new-collection-2.avif" type="image/avif">
+              <source srcset="images/new-collection-2.webp" type="image/webp">
+              <img src="images/new-collection-2.jpg" alt="Photo">
+            </picture>
+            <p class="new-collection__box-text">
+              ELEVATE YOUR STYLE WITH DAVID BECKHAM
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=include footer.html -->
