--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -29,7 +29,7 @@
       <section class="new-collection">
         <div class="new-collection__container">
           <div class="new-collection__content">
-            <h2 class="new-collection__title">NEW COLLECTION</h2>
+            <h2 class="new-collection__title title">NEW COLLECTION</h2>
             <div class="new-collection__text">
               <p>
                 A new era begins. Co-designed with David, the BECKHAM x BOSS collection showcases elevated design in the
@@ -63,6 +63,29 @@
             </p>
           </div>
         </div>
+      </section>
+      <section class="join-us">
+        <div class="join-us__container">
+          <div class="join-us__content">
+            <h2 class="join-us__title title title--white">JOIN US</h2>
+            <p class="join-us__text">
+              Sign up and get 10% discount on your first purchase!
+            </p>
+            <form class="join-us__form" action="#">
+              <input class="join-us__input" type="text" placeholder="First Name">
+              <input class="join-us__input" type="email" placeholder="Email">
+              <button class="join-us__form-btn" type="submit">GET 10%</button>
+              <p class="join-us__form-text">
+                *By compleating this form you are signing up to receive our emails and can unsubscribe at any time.
+              </p>
+            </form>
+          </div>
+        </div>
+        <picture class="join-us__img">
+          <source srcset="images/join-us.avif" type="image/avif">
+          <source srcset="images/join-us.webp" type="image/webp">
+          <img src="images/join-us.jpg" alt="join us">
+        </picture>
       </section>
     </main>
 
