added about section to main page

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -87,6 +87,50 @@
           <img src="images/join-us.jpg" alt="join us">
         </picture>
       </section>
+      <section class="about">
+        <div class="about__container">
+          <div class="about__content">
+            <h2 class="about__title title">David Beckham</h2>
+            <div class="about__text">
+              <p>
+                "For me, style has always been about confidence, simplicity, and authenticity—and that’s exactly what
+                this BOSS
+                collection captures. Each piece is designed with a sense of purpose and elegance that fits effortlessly
+                into the life of
+                a modern man. Whether I’m at an event, spending time with family, or traveling, I want clothes that
+                reflect who I am
+                without trying too hard. BOSS understands that balance between refinement and ease, and I’m proud to be
+                part of
+                something that empowers people to feel strong, comfortable, and truly themselves."
+              </p>
+              <blockquote>
+                <p>
+                  "This collection is all about clean lines, strong identity, and understated confidence—three things
+                  that
+                  have always
+                  defined my personal style."
+                </p>
+              </blockquote>
+              <p>
+                "Collaborating with BOSS feels natural to me — they share my values of hard work, precision, and
+                timeless design. What I
+                love most is how the collection combines sharp tailoring with relaxed confidence. It's not just about
+                looking good; it's
+                about feeling empowered in your own skin. Fashion should be effortless, and BOSS achieves that with
+                grace."
+              </p>
+            </div>
+          </div>
+          <div class="about__more">
+            <picture class="about__img">
+              <source srcset="images/about.avif" type="image/avif">
+              <source srcset="images/about.webp" type="image/webp">
+              <img src="images/about.jpg" alt="about">
+            </picture>
+            <a class="about__link" href="#">Show more</a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=include footer.html -->
