added advantages section to main page

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -131,6 +131,26 @@
           </div>
         </div>
       </section>
+      <section class="advantages">
+        <div class="advantages__container">
+          <picture class="advantages__img">
+            <source srcset="images/advantages.avif" type="image/avif">
+            <source srcset="images/advantages.webp" type="image/webp">
+            <img src="images/advantages.jpg" alt="Photo">
+          </picture>
+          <div class="advantages__content">
+            <h2 class="advantages__title title title--white">OUR ADVANTAGES</h2>
+            <ul class="advantages__list">
+              <li class="advantages__item">Timeless style</li>
+              <li class="advantages__item">Elegant and comfortable</li>
+              <li class="advantages__item">Premium quality</li>
+              <li class="advantages__item">Versatile wear</li>
+              <li class="advantages__item">Confidence-boosting</li>
+              <li class="advantages__item">Modern attitude</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=include footer.html -->
