added blog section to main page

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -151,6 +151,40 @@
           </div>
         </div>
       </section>
+      <section class="blog">
+        <div class="blog__container">
+          <div class="blog__main">
+            <h2 class="blog__title title">OUR BLOG</h2>
+            <p class="blog__text">
+              Our blog shares insights about style, design, and modern living.
+              We inspire confidence and creativity through curated articles.  Stay updated with the latest trends and
+              expert advice
+              from our team.
+            </p>
+            <a class="blog__item" href="#">
+              <picture class="blog__img">
+                <source srcset="images/blog-1.avif" type="image/avif">
+                <source srcset="images/blog-1.webp" type="image/webp">
+                <img src="images/blog-1.jpg" alt="Photo">
+              </picture>
+              <h3 class="blog__item-title">Top Trends in Modern Design You Need to Know</h3>
+              <div class="blog__date">Monday, 20 May 2025</div>
+            </a>
+          </div>
+          <div class="blog__box">
+            <a class="blog__item" href="#">
+              <picture class="blog__img">
+                <source srcset="images/blog-3.avif" type="image/avif">
+                <source srcset="images/blog-3.webp" type="image/webp">
+                <img src="images/blog-3.jpg" alt="Photo">
+              </picture>
+              <h3 class="blog__item-title">"How to Elevate Your Style with Timeless Pieces"</h3>
+              <div class="blog__date">Tuesday, 16 April 2025</div>
+            </a>
+            <a class="blog__more" href="#">Show more</a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=include footer.html -->
